# ag_conf_transcribation

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  config.ini.template  convert_audio.py  decomposition.md  main.py  pyproject.toml  requests.md
audio_transcriber/: __init__.py  audio_converter.py  audio_processor.py  summarization.py
clients/: main.py
clients/asr/: file_recognize.py  recognize.py
clients/asr/utils/: response.py
tests/: test_audio_processor.py
