[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-transcriber"
version = "0.1.0"
description = "Audio extraction and transcription utility"
requires-python = ">=3.8,<3.14"
dependencies = [
    "tqdm>=4.65.0",
    "ffmpeg-python>=0.2.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "ruff>=0.0.291",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "detect-secrets>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["audio_transcriber*"]

[project.scripts]
audio-transcriber = "audio_transcriber.audio_processor:main"
convert-audio = "audio_transcriber.audio_converter:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true